updated package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week5_demo",
+  "name": "winter2021_2601_01_week5_demo",
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
